PROBANDO CAMBIAR DE FECHA

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=ApiBolsaEmpleo
-APP_ENV=local
+APP_ENV=production 
 CORREO=soporte@proeditsclub.com
 CORREO_ADMIN=jhonnymichaeldj2011@hotmail.com
 TITULO_RECUPERAR_PASSWORD='Solicitud de nueva contraseña'
@@ -30,6 +30,7 @@ DB_PORT=3306
 DB_DATABASE=pro_edit
 DB_USERNAME=jhonnydj
 DB_PASSWORD=ky4lkexwbsc8
+DB_TIMEZONE=America/Guayaquil
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
