--- a/laravel-full/.env
+++ b/laravel-full/.env
@@ -4,6 +4,7 @@ APP_KEY=base64:AtyU45PyJQfvV61zzOb//rNksGraq0avCGj9JceWdeY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+APP_TIMEZONE=America/Guayaquil
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
