creando seedar datos por default

--- a/laravel-full/.env
+++ b/laravel-full/.env
@@ -4,6 +4,10 @@ APP_KEY=base64:AtyU45PyJQfvV61zzOb//rNksGraq0avCGj9JceWdeY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+ADMIN_NAME="admin"
+ADMIN_EMAIL=admin@admin.com
+ADMIN_PASSWORD=admin
+
 APP_TIMEZONE=America/Guayaquil
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
