--- a/laravel-full/composer.json
+++ b/laravel-full/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "spatie/laravel-permission": "^5.5",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "wapmorgan/mp3info": "^0.0.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
